deploy/nft-auth/nft-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nft-auth-service-ingress
  namespace: default
  labels:
    app: nft-auth-service
spec:
  ingressClassName: nginx
  rules:
  - host: nft-auth.miladyos.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nft-auth-service
            port:
              number: 80
